styles.css
/* ... */
#pageHeader h2,
#pageHeader p {
    color: #fff;
}

/* Blog Page */

#pageHeader.blogHeader {
    background-image: url(img/diosa3.jpg);
}

#blog {
    padding: 150px 150px 0 150px;
}

#blog .blogBox {
    display: flex;
    align-items: center;
    width: 100%;
    position: relative;
    padding-bottom: 90px;
}

#blog .blogImage {
    width: 50%;
    margin-right: 40px;
}

#blog img {
    width: 100%;
    height: 300px;
    object-fit: cover;
}

#blog .blogDetails {
    width: 50%;
}

#blog .blogDetails a {
    text-decoration: none;
    font-size: 11px;
    color: #f3eaf7;
    font-weight: 700;
    position: relative;
    transition: 0.3s;
}

#blog .blogDetails a::after {
    content: "";
    width: 50px;
    height: 1px;
    background-color: #f3eaf7;
    position: absolute;
    top: 4px;
    right: -60px;
}

#blog .blogDetails a:hover {
    color: #d7837d;
}

#blog .blogDetails a:hover::after {
    background-color: #d7837d;
}

#blog .blogBox h1 {
    position: absolute;
    top: -40px;
    left: 0;
    font-size: 70px;
    font-weight: 700;
    color: #c9cbce;
    z-index: -9;
}

/* Shop Page  */

#pageHeader.aboutHeader {
    background-image: url(img/diosa4.jpg);
    width: 100%;
}

#aboutHead img {
    width: 30%;
    height: auto;
    border-radius: 15%;
}

#aboutHead .img1 {
    display: none;
}

#aboutHead {
    display: flex;
    align-items: center;
    margin-bottom: 15px;
    opacity: 70%;
}

#aboutHead:hover {
    opacity: 100%;
    transition: opacity 1s;
}

#aboutHead div {
    padding-left: 40px;
    padding-right: 40px;
}

#aboutHead a {
    text-decoration: none;
    color: #d7837d;
}

#aboutHead p {
    font-size: calc(15px + 0.390625vw)
}

/* Contact Page */

#contactDetails {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#pageHeader.contactHeader {
    background-image: url(img/diosa5.jpg);
}

#pageHeader.contactHeader2 {
    background-image: url(img/diosa2.jpg);
}

#contactDetails .details {
    width: 40%;
}

#contactDetails .details span,
#formDetails form span {
    font-size: 12px;
    color: #f3eaf7;
}

#contactDetails .details h2,
#formDetails form h2 {
    font-size: 26px;
    line-height: 35px;
    padding: 20px 0;
}

#contactDetails .details h3 {
    font-size: 16px;
    padding-bottom: 15px;
}

#contactDetails .details li {
    list-style: none;
    display: flex;
    padding: 10px 0;
}

#contactDetails .details li i {
    font-size: 14px;
    padding-right: 22px;
}

#contactDetails .details li p {
    margin: 0;
    font-size: 14px;
}

#contactDetails .map {
    width: 55%;
    height: 400px;
}

#contactDetails iframe {
    width: 100%;
    height: 100%;
}

#formDetails form {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#formDetails form input,
#formDetails form textarea {
    width: 55%;
    padding: 12px 15px;
    outline: none;
    margin-bottom: 20px;
    border: 1px solid #e1e1e1;
}

#formDetails form button {
    background-color: #d7837d;
    color: #fff;
}

.panel{
    display: flex;
    justify-content: space-evenly;    
    align-items: center;
    padding: 25px;
    margin: 25px;
    border: 1px solid #f3eaf7;
    border-radius: 40px;
    background-color: rgba(215, 131, 125, 0.25);
    backdrop-filter: blur(50px);
}

.panelText a {
    text-decoration: none;
    color: #f3eaf7;
    transition: 0.3s;
}
.panelText a:hover {
    color: #d7837d;
}

.panelText a:hover::after {
    background-color: #d7837d;
}

.panelImg img {
    width: 60%;
    border-radius: 25px;
}

@media (max-width: 477px) {
    
    .sectionp1 {
        padding: 20px;
    }

    .videoDiosa video{
        width: 325px;
        height: 300px;
    }

    #header {
        padding: 15px 15px;
        width: 100%;
        text-align: center;
        overflow: scroll;
    }

    #navi {
        width: 100%;
        text-align: center;
    }

    #h2 {
        font-size: 32px;
    }

    h1 {
        font-size: 38px;
    }

    #product1 .pro {
        width: 100%;
    }

    #banner {
        height: 30vh;
    }

    #banner3 {
        width: 100%;
    }

    #newsletter {
        padding: 40px 20px;
    }

    #newsletter .form {
        width: 100%;
    }

    /* Blog Page */

    #blog {
        padding: 100px 20px 0 20px;
    }

    #blog .blogBox {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
    }

    #blog .blogImage {
        width: 100%;
        margin-right: 0px;
        margin-bottom: 30px;
    }

    #blog .blogDetails {
        width: 100%;
    }


    /* About Page */

    #aboutHead {
        flex-direction: column;
        opacity: 1;
    }

    #aboutHead img {
        width: 100%;
        margin-bottom: 20px;
    }

    #aboutHead .img2 {
        display: none;
    }

    #aboutHead .img1 {
        display: inline;
    }

    #aboutHead div {
        padding-left: 0px;
    }

    /* Contact Page */

    #contactDetails {
        flex-direction: column;
    }

    #contactDetails .details {
        width: 100%;
        margin-bottom: 30px;
    }

    #contactDetails .map {
        width: 100%;
        margin-bottom: 30px;
    }
}


@media (min-width: 799px) and (max-width: 1080px) {

    .sectionp1{
        padding: 40px 40px;
    }

    .videoDiosa video{
        width: 825px;
        height: 500px;
    }


    #navi {
        display: flex;
        align-items: center;
        justify-items: auto;
    }

    #product1 .proContainer {
        display: flex;
        justify-content: space-between;
    }

    #product1 .pro{
        margin: 15px;
    }

    #banner {
        height: 20vh;
    }

    #smBanner .bannerBox {
        min-width: 100%;
        height: 30vh;
    }

    #banner3 {
        padding: 0 40px;
    }

    #newsletter .form {
        width: 70%;
    } 
}

